testsuite/tests/parser/should_fail/cmdFail002.hs
{-# LANGUAGE Arrows #-}
module CmdFail002 where

f = proc x -> (_ -< _) :: _
